--- a/ColorSwitch/.classpath
+++ b/ColorSwitch/.classpath
@@ -6,12 +6,12 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/lib_ScreenManager"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/MishaAnnotations.jar"/>
+	<classpathentry kind="lib" path="lib/MishaScreenLib.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
